// Vitest Snapshot v1

exports[`Image > renders correctly if \`imageBehaviour\` is \`full\` and \`effect\` is \`inOutSlide\` 1`] = `
<div
  className="wrapper--slide-effect"
  role="listitem"
>
  <figure
    className="image--base image--full-format image--inOutSlide-effect image--selected"
    data-cy="image-slide-1"
    style={
      {
        "transform": "scale(1)",
        "transitionDuration": "300ms",
      }
    }
  />
</div>
`;

exports[`Image > renders correctly if \`imageBlur.blur\` is \`true\` and images are set 1`] = `
<div
  className="wrapper--slide-effect"
  role="listitem"
>
  <div
    className="blur--base"
    style={
      {
        "backgroundImage": "initial",
        "filter": "blur(undefinedpx)",
        "height": "calc(100% + NaNpx)",
        "left": "-undefinedpx",
        "top": "-undefinedpx",
        "width": "calc(100% + NaNpx)",
        "zIndex": 0,
      }
    }
  />
  <figure
    className="image--base image--selected"
    data-cy="image-slide-undefined"
    style={{}}
  />
</div>
`;

exports[`Image > renders correctly if \`imageBlur.blur\` is \`true\` and images are set along with other props 1`] = `
<div
  className="wrapper--fade-effect"
  role="listitem"
>
  <div
    className="blur--base"
    style={
      {
        "backgroundImage": "url(b.png)",
        "filter": "blur(20px)",
        "height": "calc(100% + 40px)",
        "left": "-20px",
        "opacity": 1,
        "top": "-20px",
        "transitionDuration": "300ms",
        "width": "calc(100% + 40px)",
        "zIndex": 0,
      }
    }
  />
  <figure
    className="image--base image--fade-effect image--contained-format image--selected"
    data-cy="image-slide-1"
    style={
      {
        "opacity": 1,
        "transitionDuration": "300ms",
      }
    }
  />
</div>
`;

exports[`Image > renders correctly without other props, if \`imageBlur.blur\` is \`false\` 1`] = `
<div
  className="wrapper--slide-effect"
  role="listitem"
>
  <figure
    className="image--base image--selected"
    data-cy="image-slide-undefined"
    style={{}}
  />
</div>
`;
